hermes_ws/log/build_2024-10-08_12-02-45/cameras/stderr.log
  File "/home/hermes/Hermes/hermes_ws/install/cameras/lib/python3.10/site-packages/cameras/cameras_node.py", line 6
    def main()
              ^
SyntaxError: expected ':'

